syntax = "proto3";

package kvstore;
option go_package="github.com/gemlab-dev/relor/internal/gen/pb/db";

import "graph/graph.proto";

enum WorkflowStatus {
    WORKFLOW_STATUS_UNSPECIFIED = 0;
    WORKFLOW_STATUS_PENDING = 1;
    WORKFLOW_STATUS_RUNNING = 2;
    WORKFLOW_STATUS_COMPLETED = 3;
    WORKFLOW_STATUS_FAILED = 4;
}

message Workflow {
    string id = 1;
    string current_node = 2;
    WorkflowStatus status = 3;
    graph.Graph graph = 4;

    // The ID of the last transition that was executed in this workflow.
    // It is unset for workflows that are not yet started.
    optional int64 last_transition_id = 5;
}

message WorkflowTransition {
    // Sequence number of the transition.
    // This is a monotonically increasing number that is unique to the workflow.
    // It is not unique across workflows.
    int64 id = 1;

    string workflow_id = 2;

    string from_node = 3;
    string to_node = 4;
    string label = 5;
    int64 timestamp = 6;
}

